--- a/themes/inhabitent/package.json
+++ b/themes/inhabitent/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redstarter",
+  "name": "inhabitent",
   "version": "1.0.0",
-  "description": "A starter theme for RED students, based on Underscores.",
+  "description": "A starter theme for inhabitent, based on Underscores.",
   "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
